--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,11 @@ body {
 span.label {
     margin: 2px;
 } 
+
+.ng-invalid.ng-dirty {
+    border-color: red;
+}
+
+.ng-valid.ng-dirty {
+    border-color: green;
+}
